[metadata]
name = dcl
version = attr: dcl.__version__
author = Kreusada
author_email = kreusadaprojects@gmail.com
description = Python library used for diacritic manipulation.
url = https://github.com/Kreusada/python-dcl
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = dcl
