[metadata]
name = dcl
version = attr: dcl.__version__
author = Kreusada
author_email = kreusadaprojects@gmail.com
description = Library for working with diacritics in multilingual Latin-based text. It provides functionality for adding, removing, modifying and processing diacritic marks, supporting functions for orthographic and linguistic analysis.
url = https://github.com/Kreusada/python-dcl
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = dcl
include_package_data = True

[options.package_data]
dcl = *.pyi
